# tiny-chacha

./: CMakeLists.txt  README.md
src/: tiny_chacha.c  tiny_chacha.h
test/: test_chacha.c
